parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> exp
Rule 1     exp -> ID + ASG exp
Rule 2     exp -> ID - ASG exp
Rule 3     exp -> ID * ASG exp
Rule 4     exp -> ID DIV ASG exp
Rule 5     exp -> ID POW ASG exp
Rule 6     exp -> ID or ASG exp
Rule 7     exp -> ID xor ASG exp
Rule 8     exp -> ID and ASG exp
Rule 9     exp -> ID ASG exp
Rule 10    exp -> ID USG
Rule 11    exp -> exp + exp
Rule 12    exp -> exp - exp
Rule 13    exp -> exp * exp
Rule 14    exp -> exp DIV exp
Rule 15    exp -> exp POW exp
Rule 16    exp -> exp or exp
Rule 17    exp -> exp xor exp
Rule 18    exp -> exp and exp
Rule 19    cmp -> exp CMP exp
Rule 20    cmp -> cmp CMP exp
Rule 21    exp -> cmp
Rule 22    ifc -> IF exp THEN exp
Rule 23    ifc -> IF exp THEN exp ELSE exp
Rule 24    ifc -> IF exp THEN exp ELSE ifc
Rule 25    exp -> ifc END
Rule 26    exp -> FOR ID IN it DO exp END
Rule 27    exp -> ( exp )
Rule 28    exp -> ID
Rule 29    it -> [ exp , exp ]
Rule 30    it -> ] exp , exp ]
Rule 31    it -> [ exp , exp [
Rule 32    it -> ] exp , exp [
Rule 33    exp -> it
Rule 34    exp -> ID + exp
Rule 35    exp -> ID - exp
Rule 36    exp -> ID * exp
Rule 37    exp -> ID DIV exp
Rule 38    exp -> ID POW exp
Rule 39    exp -> ID or exp
Rule 40    exp -> ID xor exp
Rule 41    exp -> ID and exp
Rule 42    exp -> + exp
Rule 43    exp -> - exp
Rule 44    exp -> not exp
Rule 45    exp -> SYS exp
Rule 46    seq -> exp ; seq
Rule 47    seq -> exp ;
Rule 48    seq -> exp
Rule 49    exp -> { seq }
Rule 50    exp -> exp imag
Rule 51    exp -> NUM
Rule 52    exp -> WHILE exp DO exp END

Terminals, with rules where they appear

(                    : 27
)                    : 27
*                    : 3 13 36
+                    : 1 11 34 42
,                    : 29 30 31 32
-                    : 2 12 35 43
;                    : 46 47
ASG                  : 1 2 3 4 5 6 7 8 9
CMP                  : 19 20
DIV                  : 4 14 37
DO                   : 26 52
ELSE                 : 23 24
END                  : 25 26 52
FOR                  : 26
ID                   : 1 2 3 4 5 6 7 8 9 10 26 28 34 35 36 37 38 39 40 41
IF                   : 22 23 24
IN                   : 26
NUM                  : 51
POW                  : 5 15 38
SYS                  : 45
THEN                 : 22 23 24
USG                  : 10
WHILE                : 52
[                    : 29 31 31 32
]                    : 29 30 30 32
and                  : 8 18 41
error                : 
imag                 : 50
not                  : 44
or                   : 6 16 39
xor                  : 7 17 40
{                    : 49
}                    : 49

Nonterminals, with rules where they appear

cmp                  : 20 21
exp                  : 1 2 3 4 5 6 7 8 9 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 22 22 23 23 23 24 24 26 27 29 29 30 30 31 31 32 32 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 50 52 52 0
ifc                  : 24 25
it                   : 26 33
seq                  : 46 49

Parsing method: LALR

state 0

    (0) S' -> . exp
    (1) exp -> . ID + ASG exp
    (2) exp -> . ID - ASG exp
    (3) exp -> . ID * ASG exp
    (4) exp -> . ID DIV ASG exp
    (5) exp -> . ID POW ASG exp
    (6) exp -> . ID or ASG exp
    (7) exp -> . ID xor ASG exp
    (8) exp -> . ID and ASG exp
    (9) exp -> . ID ASG exp
    (10) exp -> . ID USG
    (11) exp -> . exp + exp
    (12) exp -> . exp - exp
    (13) exp -> . exp * exp
    (14) exp -> . exp DIV exp
    (15) exp -> . exp POW exp
    (16) exp -> . exp or exp
    (17) exp -> . exp xor exp
    (18) exp -> . exp and exp
    (21) exp -> . cmp
    (25) exp -> . ifc END
    (26) exp -> . FOR ID IN it DO exp END
    (27) exp -> . ( exp )
    (28) exp -> . ID
    (33) exp -> . it
    (34) exp -> . ID + exp
    (35) exp -> . ID - exp
    (36) exp -> . ID * exp
    (37) exp -> . ID DIV exp
    (38) exp -> . ID POW exp
    (39) exp -> . ID or exp
    (40) exp -> . ID xor exp
    (41) exp -> . ID and exp
    (42) exp -> . + exp
    (43) exp -> . - exp
    (44) exp -> . not exp
    (45) exp -> . SYS exp
    (49) exp -> . { seq }
    (50) exp -> . exp imag
    (51) exp -> . NUM
    (52) exp -> . WHILE exp DO exp END
    (19) cmp -> . exp CMP exp
    (20) cmp -> . cmp CMP exp
    (22) ifc -> . IF exp THEN exp
    (23) ifc -> . IF exp THEN exp ELSE exp
    (24) ifc -> . IF exp THEN exp ELSE ifc
    (29) it -> . [ exp , exp ]
    (30) it -> . ] exp , exp ]
    (31) it -> . [ exp , exp [
    (32) it -> . ] exp , exp [

    ID              shift and go to state 2
    FOR             shift and go to state 7
    (               shift and go to state 9
    +               shift and go to state 3
    -               shift and go to state 4
    not             shift and go to state 10
    SYS             shift and go to state 11
    {               shift and go to state 12
    NUM             shift and go to state 13
    WHILE           shift and go to state 14
    IF              shift and go to state 15
    [               shift and go to state 16
    ]               shift and go to state 17

    exp                            shift and go to state 1
    cmp                            shift and go to state 5
    ifc                            shift and go to state 6
    it                             shift and go to state 8

state 1

    (0) S' -> exp .
    (11) exp -> exp . + exp
    (12) exp -> exp . - exp
    (13) exp -> exp . * exp
    (14) exp -> exp . DIV exp
    (15) exp -> exp . POW exp
    (16) exp -> exp . or exp
    (17) exp -> exp . xor exp
    (18) exp -> exp . and exp
    (50) exp -> exp . imag
    (19) cmp -> exp . CMP exp

    +               shift and go to state 18
    -               shift and go to state 19
    *               shift and go to state 20
    DIV             shift and go to state 21
    POW             shift and go to state 22
    or              shift and go to state 23
    xor             shift and go to state 24
    and             shift and go to state 25
    imag            shift and go to state 26
    CMP             shift and go to state 27


state 2

    (1) exp -> ID . + ASG exp
    (2) exp -> ID . - ASG exp
    (3) exp -> ID . * ASG exp
    (4) exp -> ID . DIV ASG exp
    (5) exp -> ID . POW ASG exp
    (6) exp -> ID . or ASG exp
    (7) exp -> ID . xor ASG exp
    (8) exp -> ID . and ASG exp
    (9) exp -> ID . ASG exp
    (10) exp -> ID . USG
    (28) exp -> ID .
    (34) exp -> ID . + exp
    (35) exp -> ID . - exp
    (36) exp -> ID . * exp
    (37) exp -> ID . DIV exp
    (38) exp -> ID . POW exp
    (39) exp -> ID . or exp
    (40) exp -> ID . xor exp
    (41) exp -> ID . and exp

    +               shift and go to state 28
    -               shift and go to state 30
    *               shift and go to state 31
    DIV             shift and go to state 32
    POW             shift and go to state 33
    or              shift and go to state 34
    xor             shift and go to state 35
    and             shift and go to state 36
    ASG             shift and go to state 29
    USG             shift and go to state 37
    imag            reduce using rule 28 (exp -> ID .)
    CMP             reduce using rule 28 (exp -> ID .)
    $end            reduce using rule 28 (exp -> ID .)
    )               reduce using rule 28 (exp -> ID .)
    ;               reduce using rule 28 (exp -> ID .)
    }               reduce using rule 28 (exp -> ID .)
    DO              reduce using rule 28 (exp -> ID .)
    THEN            reduce using rule 28 (exp -> ID .)
    ,               reduce using rule 28 (exp -> ID .)
    END             reduce using rule 28 (exp -> ID .)
    ELSE            reduce using rule 28 (exp -> ID .)
    ]               reduce using rule 28 (exp -> ID .)
    [               reduce using rule 28 (exp -> ID .)

  ! +               [ reduce using rule 28 (exp -> ID .) ]
  ! -               [ reduce using rule 28 (exp -> ID .) ]
  ! *               [ reduce using rule 28 (exp -> ID .) ]
  ! DIV             [ reduce using rule 28 (exp -> ID .) ]
  ! POW             [ reduce using rule 28 (exp -> ID .) ]
  ! or              [ reduce using rule 28 (exp -> ID .) ]
  ! xor             [ reduce using rule 28 (exp -> ID .) ]
  ! and             [ reduce using rule 28 (exp -> ID .) ]


state 3

    (42) exp -> + . exp
    (1) exp -> . ID + ASG exp
    (2) exp -> . ID - ASG exp
    (3) exp -> . ID * ASG exp
    (4) exp -> . ID DIV ASG exp
    (5) exp -> . ID POW ASG exp
    (6) exp -> . ID or ASG exp
    (7) exp -> . ID xor ASG exp
    (8) exp -> . ID and ASG exp
    (9) exp -> . ID ASG exp
    (10) exp -> . ID USG
    (11) exp -> . exp + exp
    (12) exp -> . exp - exp
    (13) exp -> . exp * exp
    (14) exp -> . exp DIV exp
    (15) exp -> . exp POW exp
    (16) exp -> . exp or exp
    (17) exp -> . exp xor exp
    (18) exp -> . exp and exp
    (21) exp -> . cmp
    (25) exp -> . ifc END
    (26) exp -> . FOR ID IN it DO exp END
    (27) exp -> . ( exp )
    (28) exp -> . ID
    (33) exp -> . it
    (34) exp -> . ID + exp
    (35) exp -> . ID - exp
    (36) exp -> . ID * exp
    (37) exp -> . ID DIV exp
    (38) exp -> . ID POW exp
    (39) exp -> . ID or exp
    (40) exp -> . ID xor exp
    (41) exp -> . ID and exp
    (42) exp -> . + exp
    (43) exp -> . - exp
    (44) exp -> . not exp
    (45) exp -> . SYS exp
    (49) exp -> . { seq }
    (50) exp -> . exp imag
    (51) exp -> . NUM
    (52) exp -> . WHILE exp DO exp END
    (19) cmp -> . exp CMP exp
    (20) cmp -> . cmp CMP exp
    (22) ifc -> . IF exp THEN exp
    (23) ifc -> . IF exp THEN exp ELSE exp
    (24) ifc -> . IF exp THEN exp ELSE ifc
    (29) it -> . [ exp , exp ]
    (30) it -> . ] exp , exp ]
    (31) it -> . [ exp , exp [
    (32) it -> . ] exp , exp [

    ID              shift and go to state 2
    FOR             shift and go to state 7
    (               shift and go to state 9
    +               shift and go to state 3
    -               shift and go to state 4
    not             shift and go to state 10
    SYS             shift and go to state 11
    {               shift and go to state 12
    NUM             shift and go to state 13
    WHILE           shift and go to state 14
    IF              shift and go to state 15
    [               shift and go to state 16
    ]               shift and go to state 17

    exp                            shift and go to state 38
    cmp                            shift and go to state 5
    ifc                            shift and go to state 6
    it                             shift and go to state 8

state 4

    (43) exp -> - . exp
    (1) exp -> . ID + ASG exp
    (2) exp -> . ID - ASG exp
    (3) exp -> . ID * ASG exp
    (4) exp -> . ID DIV ASG exp
    (5) exp -> . ID POW ASG exp
    (6) exp -> . ID or ASG exp
    (7) exp -> . ID xor ASG exp
    (8) exp -> . ID and ASG exp
    (9) exp -> . ID ASG exp
    (10) exp -> . ID USG
    (11) exp -> . exp + exp
    (12) exp -> . exp - exp
    (13) exp -> . exp * exp
    (14) exp -> . exp DIV exp
    (15) exp -> . exp POW exp
    (16) exp -> . exp or exp
    (17) exp -> . exp xor exp
    (18) exp -> . exp and exp
    (21) exp -> . cmp
    (25) exp -> . ifc END
    (26) exp -> . FOR ID IN it DO exp END
    (27) exp -> . ( exp )
    (28) exp -> . ID
    (33) exp -> . it
    (34) exp -> . ID + exp
    (35) exp -> . ID - exp
    (36) exp -> . ID * exp
    (37) exp -> . ID DIV exp
    (38) exp -> . ID POW exp
    (39) exp -> . ID or exp
    (40) exp -> . ID xor exp
    (41) exp -> . ID and exp
    (42) exp -> . + exp
    (43) exp -> . - exp
    (44) exp -> . not exp
    (45) exp -> . SYS exp
    (49) exp -> . { seq }
    (50) exp -> . exp imag
    (51) exp -> . NUM
    (52) exp -> . WHILE exp DO exp END
    (19) cmp -> . exp CMP exp
    (20) cmp -> . cmp CMP exp
    (22) ifc -> . IF exp THEN exp
    (23) ifc -> . IF exp THEN exp ELSE exp
    (24) ifc -> . IF exp THEN exp ELSE ifc
    (29) it -> . [ exp , exp ]
    (30) it -> . ] exp , exp ]
    (31) it -> . [ exp , exp [
    (32) it -> . ] exp , exp [

    ID              shift and go to state 2
    FOR             shift and go to state 7
    (               shift and go to state 9
    +               shift and go to state 3
    -               shift and go to state 4
    not             shift and go to state 10
    SYS             shift and go to state 11
    {               shift and go to state 12
    NUM             shift and go to state 13
    WHILE           shift and go to state 14
    IF              shift and go to state 15
    [               shift and go to state 16
    ]               shift and go to state 17

    exp                            shift and go to state 39
    cmp                            shift and go to state 5
    ifc                            shift and go to state 6
    it                             shift and go to state 8

state 5

    (21) exp -> cmp .
    (20) cmp -> cmp . CMP exp

    +               reduce using rule 21 (exp -> cmp .)
    -               reduce using rule 21 (exp -> cmp .)
    *               reduce using rule 21 (exp -> cmp .)
    DIV             reduce using rule 21 (exp -> cmp .)
    POW             reduce using rule 21 (exp -> cmp .)
    or              reduce using rule 21 (exp -> cmp .)
    xor             reduce using rule 21 (exp -> cmp .)
    and             reduce using rule 21 (exp -> cmp .)
    imag            reduce using rule 21 (exp -> cmp .)
    $end            reduce using rule 21 (exp -> cmp .)
    )               reduce using rule 21 (exp -> cmp .)
    ;               reduce using rule 21 (exp -> cmp .)
    }               reduce using rule 21 (exp -> cmp .)
    DO              reduce using rule 21 (exp -> cmp .)
    THEN            reduce using rule 21 (exp -> cmp .)
    ,               reduce using rule 21 (exp -> cmp .)
    END             reduce using rule 21 (exp -> cmp .)
    ELSE            reduce using rule 21 (exp -> cmp .)
    ]               reduce using rule 21 (exp -> cmp .)
    [               reduce using rule 21 (exp -> cmp .)
    CMP             shift and go to state 40

  ! CMP             [ reduce using rule 21 (exp -> cmp .) ]


state 6

    (25) exp -> ifc . END

    END             shift and go to state 41


state 7

    (26) exp -> FOR . ID IN it DO exp END

    ID              shift and go to state 42


state 8

    (33) exp -> it .

    +               reduce using rule 33 (exp -> it .)
    -               reduce using rule 33 (exp -> it .)
    *               reduce using rule 33 (exp -> it .)
    DIV             reduce using rule 33 (exp -> it .)
    POW             reduce using rule 33 (exp -> it .)
    or              reduce using rule 33 (exp -> it .)
    xor             reduce using rule 33 (exp -> it .)
    and             reduce using rule 33 (exp -> it .)
    imag            reduce using rule 33 (exp -> it .)
    CMP             reduce using rule 33 (exp -> it .)
    $end            reduce using rule 33 (exp -> it .)
    )               reduce using rule 33 (exp -> it .)
    ;               reduce using rule 33 (exp -> it .)
    }               reduce using rule 33 (exp -> it .)
    DO              reduce using rule 33 (exp -> it .)
    THEN            reduce using rule 33 (exp -> it .)
    ,               reduce using rule 33 (exp -> it .)
    END             reduce using rule 33 (exp -> it .)
    ELSE            reduce using rule 33 (exp -> it .)
    ]               reduce using rule 33 (exp -> it .)
    [               reduce using rule 33 (exp -> it .)


state 9

    (27) exp -> ( . exp )
    (1) exp -> . ID + ASG exp
    (2) exp -> . ID - ASG exp
    (3) exp -> . ID * ASG exp
    (4) exp -> . ID DIV ASG exp
    (5) exp -> . ID POW ASG exp
    (6) exp -> . ID or ASG exp
    (7) exp -> . ID xor ASG exp
    (8) exp -> . ID and ASG exp
    (9) exp -> . ID ASG exp
    (10) exp -> . ID USG
    (11) exp -> . exp + exp
    (12) exp -> . exp - exp
    (13) exp -> . exp * exp
    (14) exp -> . exp DIV exp
    (15) exp -> . exp POW exp
    (16) exp -> . exp or exp
    (17) exp -> . exp xor exp
    (18) exp -> . exp and exp
    (21) exp -> . cmp
    (25) exp -> . ifc END
    (26) exp -> . FOR ID IN it DO exp END
    (27) exp -> . ( exp )
    (28) exp -> . ID
    (33) exp -> . it
    (34) exp -> . ID + exp
    (35) exp -> . ID - exp
    (36) exp -> . ID * exp
    (37) exp -> . ID DIV exp
    (38) exp -> . ID POW exp
    (39) exp -> . ID or exp
    (40) exp -> . ID xor exp
    (41) exp -> . ID and exp
    (42) exp -> . + exp
    (43) exp -> . - exp
    (44) exp -> . not exp
    (45) exp -> . SYS exp
    (49) exp -> . { seq }
    (50) exp -> . exp imag
    (51) exp -> . NUM
    (52) exp -> . WHILE exp DO exp END
    (19) cmp -> . exp CMP exp
    (20) cmp -> . cmp CMP exp
    (22) ifc -> . IF exp THEN exp
    (23) ifc -> . IF exp THEN exp ELSE exp
    (24) ifc -> . IF exp THEN exp ELSE ifc
    (29) it -> . [ exp , exp ]
    (30) it -> . ] exp , exp ]
    (31) it -> . [ exp , exp [
    (32) it -> . ] exp , exp [

    ID              shift and go to state 2
    FOR             shift and go to state 7
    (               shift and go to state 9
    +               shift and go to state 3
    -               shift and go to state 4
    not             shift and go to state 10
    SYS             shift and go to state 11
    {               shift and go to state 12
    NUM             shift and go to state 13
    WHILE           shift and go to state 14
    IF              shift and go to state 15
    [               shift and go to state 16
    ]               shift and go to state 17

    exp                            shift and go to state 43
    cmp                            shift and go to state 5
    ifc                            shift and go to state 6
    it                             shift and go to state 8

state 10

    (44) exp -> not . exp
    (1) exp -> . ID + ASG exp
    (2) exp -> . ID - ASG exp
    (3) exp -> . ID * ASG exp
    (4) exp -> . ID DIV ASG exp
    (5) exp -> . ID POW ASG exp
    (6) exp -> . ID or ASG exp
    (7) exp -> . ID xor ASG exp
    (8) exp -> . ID and ASG exp
    (9) exp -> . ID ASG exp
    (10) exp -> . ID USG
    (11) exp -> . exp + exp
    (12) exp -> . exp - exp
    (13) exp -> . exp * exp
    (14) exp -> . exp DIV exp
    (15) exp -> . exp POW exp
    (16) exp -> . exp or exp
    (17) exp -> . exp xor exp
    (18) exp -> . exp and exp
    (21) exp -> . cmp
    (25) exp -> . ifc END
    (26) exp -> . FOR ID IN it DO exp END
    (27) exp -> . ( exp )
    (28) exp -> . ID
    (33) exp -> . it
    (34) exp -> . ID + exp
    (35) exp -> . ID - exp
    (36) exp -> . ID * exp
    (37) exp -> . ID DIV exp
    (38) exp -> . ID POW exp
    (39) exp -> . ID or exp
    (40) exp -> . ID xor exp
    (41) exp -> . ID and exp
    (42) exp -> . + exp
    (43) exp -> . - exp
    (44) exp -> . not exp
    (45) exp -> . SYS exp
    (49) exp -> . { seq }
    (50) exp -> . exp imag
    (51) exp -> . NUM
    (52) exp -> . WHILE exp DO exp END
    (19) cmp -> . exp CMP exp
    (20) cmp -> . cmp CMP exp
    (22) ifc -> . IF exp THEN exp
    (23) ifc -> . IF exp THEN exp ELSE exp
    (24) ifc -> . IF exp THEN exp ELSE ifc
    (29) it -> . [ exp , exp ]
    (30) it -> . ] exp , exp ]
    (31) it -> . [ exp , exp [
    (32) it -> . ] exp , exp [

    ID              shift and go to state 2
    FOR             shift and go to state 7
    (               shift and go to state 9
    +               shift and go to state 3
    -               shift and go to state 4
    not             shift and go to state 10
    SYS             shift and go to state 11
    {               shift and go to state 12
    NUM             shift and go to state 13
    WHILE           shift and go to state 14
    IF              shift and go to state 15
    [               shift and go to state 16
    ]               shift and go to state 17

    exp                            shift and go to state 44
    cmp                            shift and go to state 5
    ifc                            shift and go to state 6
    it                             shift and go to state 8

state 11

    (45) exp -> SYS . exp
    (1) exp -> . ID + ASG exp
    (2) exp -> . ID - ASG exp
    (3) exp -> . ID * ASG exp
    (4) exp -> . ID DIV ASG exp
    (5) exp -> . ID POW ASG exp
    (6) exp -> . ID or ASG exp
    (7) exp -> . ID xor ASG exp
    (8) exp -> . ID and ASG exp
    (9) exp -> . ID ASG exp
    (10) exp -> . ID USG
    (11) exp -> . exp + exp
    (12) exp -> . exp - exp
    (13) exp -> . exp * exp
    (14) exp -> . exp DIV exp
    (15) exp -> . exp POW exp
    (16) exp -> . exp or exp
    (17) exp -> . exp xor exp
    (18) exp -> . exp and exp
    (21) exp -> . cmp
    (25) exp -> . ifc END
    (26) exp -> . FOR ID IN it DO exp END
    (27) exp -> . ( exp )
    (28) exp -> . ID
    (33) exp -> . it
    (34) exp -> . ID + exp
    (35) exp -> . ID - exp
    (36) exp -> . ID * exp
    (37) exp -> . ID DIV exp
    (38) exp -> . ID POW exp
    (39) exp -> . ID or exp
    (40) exp -> . ID xor exp
    (41) exp -> . ID and exp
    (42) exp -> . + exp
    (43) exp -> . - exp
    (44) exp -> . not exp
    (45) exp -> . SYS exp
    (49) exp -> . { seq }
    (50) exp -> . exp imag
    (51) exp -> . NUM
    (52) exp -> . WHILE exp DO exp END
    (19) cmp -> . exp CMP exp
    (20) cmp -> . cmp CMP exp
    (22) ifc -> . IF exp THEN exp
    (23) ifc -> . IF exp THEN exp ELSE exp
    (24) ifc -> . IF exp THEN exp ELSE ifc
    (29) it -> . [ exp , exp ]
    (30) it -> . ] exp , exp ]
    (31) it -> . [ exp , exp [
    (32) it -> . ] exp , exp [

    ID              shift and go to state 2
    FOR             shift and go to state 7
    (               shift and go to state 9
    +               shift and go to state 3
    -               shift and go to state 4
    not             shift and go to state 10
    SYS             shift and go to state 11
    {               shift and go to state 12
    NUM             shift and go to state 13
    WHILE           shift and go to state 14
    IF              shift and go to state 15
    [               shift and go to state 16
    ]               shift and go to state 17

    exp                            shift and go to state 45
    cmp                            shift and go to state 5
    ifc                            shift and go to state 6
    it                             shift and go to state 8

state 12

    (49) exp -> { . seq }
    (46) seq -> . exp ; seq
    (47) seq -> . exp ;
    (48) seq -> . exp
    (1) exp -> . ID + ASG exp
    (2) exp -> . ID - ASG exp
    (3) exp -> . ID * ASG exp
    (4) exp -> . ID DIV ASG exp
    (5) exp -> . ID POW ASG exp
    (6) exp -> . ID or ASG exp
    (7) exp -> . ID xor ASG exp
    (8) exp -> . ID and ASG exp
    (9) exp -> . ID ASG exp
    (10) exp -> . ID USG
    (11) exp -> . exp + exp
    (12) exp -> . exp - exp
    (13) exp -> . exp * exp
    (14) exp -> . exp DIV exp
    (15) exp -> . exp POW exp
    (16) exp -> . exp or exp
    (17) exp -> . exp xor exp
    (18) exp -> . exp and exp
    (21) exp -> . cmp
    (25) exp -> . ifc END
    (26) exp -> . FOR ID IN it DO exp END
    (27) exp -> . ( exp )
    (28) exp -> . ID
    (33) exp -> . it
    (34) exp -> . ID + exp
    (35) exp -> . ID - exp
    (36) exp -> . ID * exp
    (37) exp -> . ID DIV exp
    (38) exp -> . ID POW exp
    (39) exp -> . ID or exp
    (40) exp -> . ID xor exp
    (41) exp -> . ID and exp
    (42) exp -> . + exp
    (43) exp -> . - exp
    (44) exp -> . not exp
    (45) exp -> . SYS exp
    (49) exp -> . { seq }
    (50) exp -> . exp imag
    (51) exp -> . NUM
    (52) exp -> . WHILE exp DO exp END
    (19) cmp -> . exp CMP exp
    (20) cmp -> . cmp CMP exp
    (22) ifc -> . IF exp THEN exp
    (23) ifc -> . IF exp THEN exp ELSE exp
    (24) ifc -> . IF exp THEN exp ELSE ifc
    (29) it -> . [ exp , exp ]
    (30) it -> . ] exp , exp ]
    (31) it -> . [ exp , exp [
    (32) it -> . ] exp , exp [

    ID              shift and go to state 2
    FOR             shift and go to state 7
    (               shift and go to state 9
    +               shift and go to state 3
    -               shift and go to state 4
    not             shift and go to state 10
    SYS             shift and go to state 11
    {               shift and go to state 12
    NUM             shift and go to state 13
    WHILE           shift and go to state 14
    IF              shift and go to state 15
    [               shift and go to state 16
    ]               shift and go to state 17

    seq                            shift and go to state 46
    exp                            shift and go to state 47
    cmp                            shift and go to state 5
    ifc                            shift and go to state 6
    it                             shift and go to state 8

state 13

    (51) exp -> NUM .

    +               reduce using rule 51 (exp -> NUM .)
    -               reduce using rule 51 (exp -> NUM .)
    *               reduce using rule 51 (exp -> NUM .)
    DIV             reduce using rule 51 (exp -> NUM .)
    POW             reduce using rule 51 (exp -> NUM .)
    or              reduce using rule 51 (exp -> NUM .)
    xor             reduce using rule 51 (exp -> NUM .)
    and             reduce using rule 51 (exp -> NUM .)
    imag            reduce using rule 51 (exp -> NUM .)
    CMP             reduce using rule 51 (exp -> NUM .)
    $end            reduce using rule 51 (exp -> NUM .)
    )               reduce using rule 51 (exp -> NUM .)
    ;               reduce using rule 51 (exp -> NUM .)
    }               reduce using rule 51 (exp -> NUM .)
    DO              reduce using rule 51 (exp -> NUM .)
    THEN            reduce using rule 51 (exp -> NUM .)
    ,               reduce using rule 51 (exp -> NUM .)
    END             reduce using rule 51 (exp -> NUM .)
    ELSE            reduce using rule 51 (exp -> NUM .)
    ]               reduce using rule 51 (exp -> NUM .)
    [               reduce using rule 51 (exp -> NUM .)


state 14

    (52) exp -> WHILE . exp DO exp END
    (1) exp -> . ID + ASG exp
    (2) exp -> . ID - ASG exp
    (3) exp -> . ID * ASG exp
    (4) exp -> . ID DIV ASG exp
    (5) exp -> . ID POW ASG exp
    (6) exp -> . ID or ASG exp
    (7) exp -> . ID xor ASG exp
    (8) exp -> . ID and ASG exp
    (9) exp -> . ID ASG exp
    (10) exp -> . ID USG
    (11) exp -> . exp + exp
    (12) exp -> . exp - exp
    (13) exp -> . exp * exp
    (14) exp -> . exp DIV exp
    (15) exp -> . exp POW exp
    (16) exp -> . exp or exp
    (17) exp -> . exp xor exp
    (18) exp -> . exp and exp
    (21) exp -> . cmp
    (25) exp -> . ifc END
    (26) exp -> . FOR ID IN it DO exp END
    (27) exp -> . ( exp )
    (28) exp -> . ID
    (33) exp -> . it
    (34) exp -> . ID + exp
    (35) exp -> . ID - exp
    (36) exp -> . ID * exp
    (37) exp -> . ID DIV exp
    (38) exp -> . ID POW exp
    (39) exp -> . ID or exp
    (40) exp -> . ID xor exp
    (41) exp -> . ID and exp
    (42) exp -> . + exp
    (43) exp -> . - exp
    (44) exp -> . not exp
    (45) exp -> . SYS exp
    (49) exp -> . { seq }
    (50) exp -> . exp imag
    (51) exp -> . NUM
    (52) exp -> . WHILE exp DO exp END
    (19) cmp -> . exp CMP exp
    (20) cmp -> . cmp CMP exp
    (22) ifc -> . IF exp THEN exp
    (23) ifc -> . IF exp THEN exp ELSE exp
    (24) ifc -> . IF exp THEN exp ELSE ifc
    (29) it -> . [ exp , exp ]
    (30) it -> . ] exp , exp ]
    (31) it -> . [ exp , exp [
    (32) it -> . ] exp , exp [

    ID              shift and go to state 2
    FOR             shift and go to state 7
    (               shift and go to state 9
    +               shift and go to state 3
    -               shift and go to state 4
    not             shift and go to state 10
    SYS             shift and go to state 11
    {               shift and go to state 12
    NUM             shift and go to state 13
    WHILE           shift and go to state 14
    IF              shift and go to state 15
    [               shift and go to state 16
    ]               shift and go to state 17

    exp                            shift and go to state 48
    cmp                            shift and go to state 5
    ifc                            shift and go to state 6
    it                             shift and go to state 8

state 15

    (22) ifc -> IF . exp THEN exp
    (23) ifc -> IF . exp THEN exp ELSE exp
    (24) ifc -> IF . exp THEN exp ELSE ifc
    (1) exp -> . ID + ASG exp
    (2) exp -> . ID - ASG exp
    (3) exp -> . ID * ASG exp
    (4) exp -> . ID DIV ASG exp
    (5) exp -> . ID POW ASG exp
    (6) exp -> . ID or ASG exp
    (7) exp -> . ID xor ASG exp
    (8) exp -> . ID and ASG exp
    (9) exp -> . ID ASG exp
    (10) exp -> . ID USG
    (11) exp -> . exp + exp
    (12) exp -> . exp - exp
    (13) exp -> . exp * exp
    (14) exp -> . exp DIV exp
    (15) exp -> . exp POW exp
    (16) exp -> . exp or exp
    (17) exp -> . exp xor exp
    (18) exp -> . exp and exp
    (21) exp -> . cmp
    (25) exp -> . ifc END
    (26) exp -> . FOR ID IN it DO exp END
    (27) exp -> . ( exp )
    (28) exp -> . ID
    (33) exp -> . it
    (34) exp -> . ID + exp
    (35) exp -> . ID - exp
    (36) exp -> . ID * exp
    (37) exp -> . ID DIV exp
    (38) exp -> . ID POW exp
    (39) exp -> . ID or exp
    (40) exp -> . ID xor exp
    (41) exp -> . ID and exp
    (42) exp -> . + exp
    (43) exp -> . - exp
    (44) exp -> . not exp
    (45) exp -> . SYS exp
    (49) exp -> . { seq }
    (50) exp -> . exp imag
    (51) exp -> . NUM
    (52) exp -> . WHILE exp DO exp END
    (19) cmp -> . exp CMP exp
    (20) cmp -> . cmp CMP exp
    (22) ifc -> . IF exp THEN exp
    (23) ifc -> . IF exp THEN exp ELSE exp
    (24) ifc -> . IF exp THEN exp ELSE ifc
    (29) it -> . [ exp , exp ]
    (30) it -> . ] exp , exp ]
    (31) it -> . [ exp , exp [
    (32) it -> . ] exp , exp [

    ID              shift and go to state 2
    FOR             shift and go to state 7
    (               shift and go to state 9
    +               shift and go to state 3
    -               shift and go to state 4
    not             shift and go to state 10
    SYS             shift and go to state 11
    {               shift and go to state 12
    NUM             shift and go to state 13
    WHILE           shift and go to state 14
    IF              shift and go to state 15
    [               shift and go to state 16
    ]               shift and go to state 17

    exp                            shift and go to state 49
    ifc                            shift and go to state 6
    cmp                            shift and go to state 5
    it                             shift and go to state 8

state 16
